--- a/compose/local/docker-compose.yaml
+++ b/compose/local/docker-compose.yaml
@@ -1,13 +1,24 @@
-version: '3.8'
-
 services:
-  backend-web:
+  mysql-db:
+    image: mysql:5.7
+    container_name: local-mysql-1
+    restart: always
+    env_file:
+      - ../../.env
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+  backend:
     build:
       context: ../.. # Путь к корню проекта
       dockerfile: compose/local/Dockerfile
-    volumes:
-      - ../../backend:/app
+    container_name: local-backend-web-1
     ports:
       - '8000:8000'
+    depends_on:
+      - mysql-db
     env_file:
-      - ../../env.local
+      - ../../.env
+
+volumes:
+  mysql-data:
