--- a/.gitignore
+++ b/.gitignore
@@ -241,6 +241,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.prod
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -690,3 +691,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+server.settings
