--- a/compose/local/docker-compose.yaml
+++ b/compose/local/docker-compose.yaml
@@ -1,24 +1,15 @@
 services:
-  mysql-db:
-    image: mysql:5.7
-    container_name: local-mysql-1
-    restart: always
-    env_file:
-      - ../../.env
-    volumes:
-      - mysql-data:/var/lib/mysql
 
   backend:
     build:
-      context: ../.. # Путь к корню проекта
+      context: ../..
       dockerfile: compose/local/Dockerfile
     container_name: local-backend-web-1
+    restart: always
     ports:
-      - '80:8000'
-    depends_on:
-      - mysql-db
+      - '8000:8000'
     env_file:
-      - ../../.env
+      - ../../.env.local
 
 volumes:
   mysql-data:
