--- a/compose/prod/docker-compose.yaml
+++ b/compose/prod/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   mysql-db:
     container_name: mysql-container
-    image: mysql:8.0
+    image: mariadb:11.5.1-ubi9-rc
     restart: always
     command: mysqld --default-authentication-plugin=caching_sha2_password
     env_file:
